[package]
name = "cargo-outdir"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
license = "MIT OR Apache-2.0"
description = "A cargo subcommand to get the $OUT_DIR environment variable from build scripts."
repository = "https://github.com/Techcable/cargo-out"
keywords = ["cargo", "out-dir", "subcommand", "outdir", "OUT_DIR"]
categories = ["development-tools::cargo-plugins", "development-tools::build-utils", "command-line-utilities"]
edition = "2021"
readme = "README.md"
# 1.70: std::io::IsTerminal
# 1.70: std::cell::OnceCell
# 1.80: std::sync::LazyLock
rust-version = "1.80"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
# Utilities
clap-cargo = { version = "0.8", features = ["cargo_metadata"] }
# Parsing cargo metadata
cargo_metadata = "0.14"
semver = "1"
# Parsing
regex = "1"

# indexmap (we want output to preserve order in our output maps)
indexmap = { version = "1", features = ["serde"] }
# Errors
anyhow = "1"
thiserror = "1"

# Serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# thin: 1.4M, 10.78s
# regular: 1.5M, 10.10s
# fat: 1.3M, 16.46s
#
# thin seems to provide the best tradeoff here :)
lto = "thin"


